# BeagleHexEditor

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: args.rs  commands.rs  main.rs
cli/src/commands/: analyze.rs  detect.rs  device.rs  disasm.rs  edit.rs  format.rs  io.rs  recipe.rs  search.rs  trace.rs  view.rs
core/: Cargo.toml
core/src/: add_buffer.rs  bookmarks.rs  cache.rs  charset.rs  compare.rs  disasm.rs  disks.rs  display.rs  document.rs  dump.rs  error.rs  export.rs  format.rs  funcdiff.rs  hash.rs  hexfile.rs  identify.rs  inspector.rs  lib.rs  magic.rs  patch.rs  piece_table.rs  progress.rs  recipe.rs  rng.rs  search.rs  shred.rs  stats.rs  strings.rs  trace.rs  transform.rs
core/src/charset/: tables.rs  tests.rs
core/src/disasm/: arm.rs  tests.rs  view.rs  x86.rs
core/src/document/: fill.rs  io.rs  tests.rs
core/src/dump/: elfcore.rs  tests.rs
core/src/export/: job.rs  tests.rs
core/src/format/: elf.rs  macho.rs  pe.rs  tests.rs  tree.rs
core/src/format/elf/: dynamic.rs  sections.rs  segments.rs  symbols.rs
core/src/format/macho/: symbols.rs
core/src/format/pe/: imports.rs
core/src/format/tests/: dynamic.rs  macho.rs  pe.rs
core/src/funcdiff/: extract.rs  tests.rs
core/src/hexfile/: export.rs  import.rs  tests.rs
core/src/identify/: entropy.rs  indicators.rs  signatures.rs  tests.rs
core/src/inspector/: dates.rs  scalar.rs  tests.rs  text.rs
core/src/patch/: tests.rs
core/src/recipe/: bitwise.rs  codec.rs  compress.rs  crypto.rs  digest.rs  parse.rs  tests.rs
core/src/search/: blocking.rs  pattern.rs  tests.rs
core/src/source/: align.rs  disk.rs  file.rs  helper.rs  mem.rs  mod.rs
core/src/trace/: linux_x86_64.rs
core/tests/: huge_file.rs  oracle.proptest-regressions  oracle.rs
gui/: Cargo.toml
gui/src/: analyze.rs  app.rs  bindiff.rs  config.rs  detect.rs  disasm.rs  hexview.rs  inspector.rs  main.rs  recipe.rs  search.rs  shortcuts.rs  structure.rs  tools.rs  util.rs
gui/src/analyze/: charts.rs  windows.rs
gui/src/app/: compare.rs  dialogs.rs  files.rs  frame.rs  menus.rs  pickers.rs
gui/src/hexview/: render.rs
gui/src/search/: drive.rs  ui.rs
gui/src/tools/: drive.rs  windows.rs
helper/: Cargo.toml  install-helper.sh  uninstall-helper.sh
helper-proto/: Cargo.toml
helper-proto/src/: lib.rs
helper/src/: main.rs
packaging/: README.md  gen-icons.py
packaging/linux/: beagle-hex-editor.desktop  install.sh
packaging/macos/: AppIcon.icns  Info.plist  bundle.sh  hexed
