[workspace]
resolver = "3"
members = ["core", "cli", "gui", "helper-proto", "helper"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"

[workspace.dependencies]
hexed-core = { path = "core" }
hexed-helper-proto = { path = "helper-proto" }

[profile.release]
opt-level = 3
lto = "thin"
debug = 1
