[package]
name = "hexed-cli"
description = "Headless frontend of the hex editor. Exists so the core is testable in CI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "hexed"
path = "src/main.rs"

[dependencies]
hexed-core.workspace = true
